Lib refactor (#25)
* Migrate away from using discord libraries directly

* minor fixes

* Add build script, license headers

Co-Authored-By: modmuss <modmuss50@users.noreply.github.com>

* More fixup, refactor config registration, add user config command

---------

Co-authored-by: modmuss <modmuss50@users.noreply.github.com>